Prevented map from dragging on mobile, added new Repair Icon, and made border widths of h3s all the same

--- a/css/sass/media.scss
+++ b/css/sass/media.scss
@@ -22,7 +22,7 @@
 	}
 	#hero{
 		section{
-			margin-top: 33vh;
+			margin-top: 26vh;
 			img{
 				margin-top: 150px;
 			}
@@ -31,6 +31,9 @@
 	#services{
 		#marker{
 			width: 250px;
+		}
+		h3{
+			width: 70%;
 		}
 	}
 	#specialty{
@@ -140,6 +143,14 @@
 		}
 	}
 	#services{
+		h3{
+			width: 40%;
+		}
+		li:first-child{
+			h3{
+				width: 52%;
+			}
+		}
 		h2, h4{
 			padding-left: 20px;
 			padding-right: 20px;
